[package]
name = "bevy-universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12.1", features = ["jpeg"]}
physical_constants = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5.0.1"
argparse = "0.2.2"
